# HeyCoach

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: 77cb94e364ce_initial_schema.py
backend/app/: deps.py  main.py
backend/app/agent/: orchestrator.py
backend/app/api/routes/: exercises.py  programs.py  workouts.py
backend/app/core/: config.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  exercise.py  knowledge_chunk.py  program.py  set_entry.py  user.py  workout_session.py
backend/app/schemas/: exercise.py  program.py  workout.py
backend/app/services/: errors.py  exercise_service.py  knowledge_service.py  program_service.py  validation.py  workout_service.py
backend/seed/: seed_exercises.py
backend/tests/: conftest.py  helpers.py  test_access_control.py  test_exercises.py  test_groundedness.py  test_health.py  test_migrations.py  test_programs.py  test_red_flag_recall.py  test_tool_correctness.py  test_workouts.py
backend/tests/fixtures/: _replay.py  _scenario.py  record_fixtures.py  recording_metrics.json
backend/tests/fixtures/claude_responses/: grd_01_progressive_overload.json  grd_02_load_increment.json  grd_03_hypertrophy_volume.json  grd_04_hypertrophy_reps.json  grd_05_what_is_rir.json  grd_06_rir_target.json  grd_07_deload.json  grd_08_frequency.json  grd_09_strength_intensity.json  grd_10_warmup.json  grd_11_rest_periods.json  grd_12_squat_kneecave.json  rf_01.json  (+37 more)
(+20 files in other folders)
