[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-gym-coach-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.139.0",
    "uvicorn[standard]==0.50.1",
    "sqlalchemy[asyncio]==2.0.51",
    "asyncpg==0.31.0",
    "alembic==1.18.5",
    "pgvector==0.4.2",
    "anthropic==0.116.0",
    "voyageai==0.4.1",
    "PyJWT==2.13.0",
    "argon2-cffi==25.1.0",
    "slowapi==0.1.10",
    "redis==8.0.1",
    "rapidfuzz==3.14.5",
    "pydantic==2.13.4",
    "pydantic-settings==2.14.2",
    "python-multipart==0.0.32",
]

[project.optional-dependencies]
dev = [
    "pytest==9.1.1",
    "pytest-asyncio==1.4.0",
    "ruff==0.15.20",
    "httpx==0.28.1",
    "httpx2==2.5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
